fix: fix letter-spacing.

--- a/src/sass/pages/dev-support.scss
+++ b/src/sass/pages/dev-support.scss
@@ -769,6 +769,7 @@ body.dev-support {
 
                             .text {
                                 font-size: 6vw;
+                                letter-spacing: -0.1em;
                                 font-weight: normal;
                                 color: rgba(255, 255, 255, 0.7);
                             }
@@ -892,6 +893,7 @@ body.dev-support {
 
                             .text {
                                 font-size: 23.4px;
+                                letter-spacing: -0.1em;
                                 color: rgba(255, 255, 255, 0.7);
                             }
                         }
